<resources>
    <string name="app_name">LavaCarApp</string>
    <string name="log_in">Log in</string>
    <string name="logo_for_the_car_wash">Logo for the car wash</string>
    <string name="cadastro">Cadastro</string>
    <string name="log_in_button_2">Log in</string>
    <string name="password_edit_text">senha</string>
    <string name="e_mail_edit_text">e-mail</string>
    <string name="log_in_title">Log in</string>
    <string name="repetir_senha_edit_text">repetir senha</string>
    <string name="cadastro_titke">Cadastro</string>
    <string name="cadastrar_button_2">Cadastrar</string>
    <string name="log_in_button">Log in</string>
    <string name="telefone_edit_Text">telefone</string>
    <string name="nome_edit_text">nome</string>
    <string name="splash_description">Agende a limpeza do seu carro sem sair de casa!</string>
    <string name="logged_page_desc">Adicione fotos do seu carro.</string>
    <string name="logged_page_desc2">As fotos serão usadas para conferir o estado do carro antes da limpeza.</string>
    <string name="open_cam_title">Abrir câmera</string>
    <string name="camera_logo">Camera logo</string>
    <string name="order_title_page">Faça seu pedido!</string>
    <string name="galery_button">Galeria</string>
    <string name="progress_level">1</string>
    <string name="clean_level_description">Nível da limpeza</string>
    <string name="enviar_pedido">Enviar pedido</string>
    <string name="sucess_order_text">Pedido enviado com sucesso!</string>
    <string name="back_order_Sent">Voltar</string>
    <string name="camera_logo_for_picture">Camera logo for picture</string>
    <string name="adicionar_foto_button">Adicionar foto</string>
    <string name="select_photos_title">Selecione até 4 fotos</string>
    <string name="abrir_galeria_title">Abrir galeria</string>
    <string name="gallery_description_pic">gallery_description</string>
    <string name="info_title">Informações</string>
    <string name="info1">∘˚˳° Adicione 4 fotos do seu veículo para sabermos como ele estava antes da limpeza. Isso garante que se houver qualquer dano ao veículo durante o procedimento, possamos resolver a situação rapidamente.</string>
    <string name="info2">Para fazer seu pedido, se atente aos seguintes requisitos:</string>
    <string name="info3">∘˚˳° Selecione o nível de limpeza. 1: limpeza apenas da parte externa do veículo. 2: limpeza externa e interna, para sujeira acumulada do dia a dia. 3: limpeza pesada, para situações mais específicas como líquidos derramados nos bancos e manchas na parte externa.</string>
    <string name="info4">∘˚˳° Para finalizar, clique em enviar pedido e, quando estiver pronto, ligaremos para o número cadastrado no perfil!</string>
    <string name="info_button">Info button</string>
    <string name="order_menu_start_button">Fazer pedido</string>
    <string name="my_profile_button">Meu perfil</string>
    <string name="start_manu_back_description">Arrow button that goes back to menu page</string>
    <string name="info_button_description">Info button</string>
    <string name="delete_profile_button">Excluir perfil</string>
    <string name="update_profile_button">Alterar dados</string>
    <string name="pic_1">Foto 1</string>
    <string name="picture_of_car">Picture of car</string>
</resources>