<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Register">

    <EditText
        android:id="@+id/telefone_user"
        android:layout_width="338dp"
        android:layout_height="55dp"
        android:ems="10"
        android:fontFamily="@font/carter_one"
        android:hint="@string/telefone_edit_Text"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome_user" />

    <EditText
        android:id="@+id/nome_user"
        android:layout_width="338dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="@font/carter_one"
        android:hint="@string/nome_edit_text"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextTextPassword4"
        android:layout_width="338dp"
        android:layout_height="52dp"
        android:ems="10"
        android:fontFamily="@font/carter_one"
        android:hint="@string/repetir_senha_edit_text"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="338dp"
        android:layout_height="56dp"
        android:ems="10"
        android:fontFamily="@font/carter_one"
        android:hint="@string/password_edit_text"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress3" />

    <EditText
        android:id="@+id/editTextTextEmailAddress3"
        android:layout_width="338dp"
        android:layout_height="55dp"
        android:ems="10"
        android:fontFamily="@font/carter_one"
        android:hint="@string/e_mail_edit_text"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telefone_user" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="132dp"
        android:layout_height="55dp"
        android:layout_marginBottom="104dp"
        android:fontFamily="@font/carter_one"
        android:text="@string/cadastrar_button_2"
        app:backgroundTint="#30A1C6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword4"
        app:layout_constraintVertical_bias="0.676" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/carter_one"
        android:text="@string/cadastro_titke"
        android:textColor="#30A1C6"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>