<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Profile">

    <Button
        android:id="@+id/delete_button"
        android:layout_width="136dp"
        android:layout_height="68dp"
        android:layout_marginBottom="104dp"
        android:fontFamily="@font/carter_one"
        android:text="@string/delete_profile_button"
        app:backgroundTint="#30A1C6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/update_button"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/telefone_user"
        android:layout_width="338dp"
        android:layout_height="55dp"
        android:ems="10"
        android:fontFamily="@font/carter_one"
        android:hint="@string/telefone_edit_Text"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome_user"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/nome_user"
        android:layout_width="338dp"
        android:layout_height="55dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:fontFamily="@font/carter_one"
        android:hint="@string/nome_edit_text"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/editTextTextEmailAddress3"
        android:layout_width="336dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/carter_one"
        android:hint="@string/e_mail_edit_text"
        android:importantForAutofill="no"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telefone_user" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="140dp"
        android:layout_height="69dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="104dp"
        android:fontFamily="@font/carter_one"
        android:text="@string/update_profile_button"
        app:backgroundTint="#30A1C6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/carter_one"
        android:text="@string/cadastro_titke"
        android:textColor="#30A1C6"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>