<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:flow_horizontalAlign="center"
    tools:context=".controller.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="310dp"
        android:layout_height="292dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/logo_for_the_car_wash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/splash_logo_foreground" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/carter_one"
        android:onClick="loginButton"
        android:text="@string/log_in_button"
        app:backgroundTint="#30A1C6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/register_button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/carter_one"
        android:onClick="registerButton"
        android:text="@string/cadastro"
        app:backgroundTint="#30A1C6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="287dp"
        android:layout_height="52dp"
        android:layout_marginBottom="44dp"
        android:fontFamily="@font/carter_one"
        android:gravity="center"
        android:text="@string/splash_description"
        android:textColor="#040404"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>